name:                usbHaskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/usbHaskell#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable usbHaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bindings-libusb
                     , bytestring
                     , text
                     , usb
                     , vector
  other-modules:       DeviceDesc
                       Config
                       String
  default-language:    Haskell2010
